# google-docs-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
google_docs_mcp/: auth.py  server.py
